[project]
name = "fastapi-chat-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Saulo-Garcia", email = "sauloagarcia@gmail.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi (>=0.115.12,<0.116.0)",
  "uvicorn (>=0.34.2,<0.35.0)",
  "python-multipart (>=0.0.20,<0.0.21)"
]
homepage = "https://github.com/Saulo-Garcia/chat-pilot-project"  # só se quiser, e tem que ser uma URL válida

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

