[tool.poetry]
name = "fastapi-chat-backend"
version = "0.1.0"
description = ""
authors = ["Saulo-Garcia <sauloagarcia@gmail.com>"]
package-mode = false
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Saulo-Garcia/chat-pilot-project"
repository = "https://github.com/Saulo-Garcia/chat-pilot-project"
keywords = ["fastapi", "chat", "backend"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
python-multipart = ">=0.0.20,<0.0.21"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



