[tool.poetry]
name = "fastapi-chat-backend"
version = "0.1.0"
description = ""
authors = ["Saulo-Garcia <sauloagarcia@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
python-multipart = ">=0.0.20,<0.0.21"

[tool.poetry.package-mode]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
